Simple Changes Added For lopp